# pretix-barcode-invoice-renderer

./: MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
pretix_barcode_invoice_renderer/: apps.py  invoice.py  signals.py
