[project]
name = "pretix-barcode-invoice-renderer"
dynamic = ["version"]
description = "Invoices with created barcode"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "DPSG Würzburg", email = "technik@dpsg-wuerzburg.de"},
]
maintainers = [
    {name = "DPSG Würzburg", email = "technik@dpsg-wuerzburg.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_barcode_invoice_renderer = "pretix_barcode_invoice_renderer:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/dpsgw-de/pretix-barcode-invoice-renderer.git"
repository = "https://github.com/dpsgw-de/pretix-barcode-invoice-renderer.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_barcode_invoice_renderer.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
